--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
+    "execa": "^4.0.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-tailwind": "^1.4.1",
