--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -6,7 +6,7 @@
   jobs:
     gh-pages-deploy:
       name: Deploying to gh-pages
-      runs-on: ubuntu-latest
+      runs-on: ubuntu-16.04
       steps:
         - name: Setup Node.js for use with actions
           uses: actions/setup-node@v1.1.0
