--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -15,8 +15,8 @@
         - name: Checkout branch
           uses: actions/checkout@v2
 
-        - name: Clean install dependencies
-          run: npm ci
+        - name: npm/yarn/pnpm install
+          uses: Jaid/action-npm-install@v1.2.4
 
         - name: Run deploy script
           run: |
