--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "gh-pages-deploy": "node scripts/gh-pages-deploy.js"
   },
   "dependencies": {
+    "chroma-js": "^2.1.0",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-virtual-scroll-list": "^2.3.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
